# my-opiniated-editor

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.codex/skills/run-bazel-tests/: SKILL.md
.codex/skills/run-bazel-tests/agents/: openai.yaml
plan/: AGENTS.md  README.md  START_HERE.md  references.md
plan/architecture/: AGENTS.md  browser-bridge-protocol.md  git-workspace-model.md  language-build-tooling.md  project-build-runtime.md  system-architecture.md
plan/decisions/: 0001-own-parent-cpp-workspace.md  0002-bridge-technology.md  0003-lsp-bazel-project-environment.md
plan/implementation/: AGENTS.md  bazel-setup-plan.md  mvp-roadmap.md  risks-and-open-questions.md
plan/product/: AGENTS.md  agent-coding-workflow.md  agent-feedback-workflows.md  keyboard-first-ux.md  vision-and-principles.md
plan/testing/: AGENTS.md  README.md  goal-session-test-contract.md  integration-scenarios.md  stage-test-plan.md  testing-guidelines.md
src/base/: BUILD.bazel  file_descriptor.h  owned_file_descriptor.h  process_id.h
src/bridge/: BUILD.bazel  browser_assets.cc  browser_assets.h  http_protocol.cc  http_protocol.h  parent_pty_session.cc  parent_pty_session.h  parent_pty_session_test.cc  parent_ws_bridge.cc  parent_ws_bridge_integration_test.py  parent_ws_bridge_test_lib.py  parent_ws_server.cc  parent_ws_server.h  pty_size.h  socket_io.cc  socket_io.h  websocket_protocol.cc  websocket_protocol.h
src/core/: BUILD.bazel  version.cc  version.h  version_test.cc
src/parent/: BUILD.bazel  main.cc  workspace_parent.cc  workspace_parent.h  workspace_parent_test.cc
test/fixtures/: BUILD.bazel  fake_agent.py  fake_agent_test.py  python_runtime_test.py
test/integration/: BUILD.bazel  fake_agent_process_test.py  workspace_parent_pty_test.py
tools/bazel/: BUILD.bazel  nix_deps.bzl  refresh_compile_commands.sh
tools/bridge/: BUILD.bazel  README.md  bridge.env.example  my-opiniated-editor-bridge.service  restart_bridge.sh  run_bridge.sh  service_scripts_test.py
tools/git-hooks/: pre-commit
tools/python/: BUILD.bazel  pyformat.sh
