load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    exclude_headers = "all",
    targets = [
        "//src/bridge:parent_pty_session_test",
        "//src/bridge:parent_ws_bridge",
        "//src/core:core_test",
        "//src/parent:workspace_parent",
        "//src/parent:workspace_parent_test",
    ],
)
