cc_library(
    name = "parent_lib",
    srcs = ["workspace_parent.cc"],
    hdrs = ["workspace_parent.h"],
)

cc_binary(
    name = "workspace_parent",
    srcs = ["main.cc"],
    visibility = [
        "//src/bridge:__pkg__",
        "//test/integration:__pkg__",
    ],
    deps = [":parent_lib"],
)

cc_test(
    name = "workspace_parent_test",
    srcs = ["workspace_parent_test.cc"],
    deps = [
        ":parent_lib",
        "@googletest//:gtest_main",
    ],
    tags = ["unit"],
)
