py_test(
    name = "fake_agent_process_test",
    srcs = ["fake_agent_process_test.py"],
    data = ["//test/fixtures:fake_agent"],
    tags = ["integration"],
)

py_test(
    name = "workspace_parent_pty_test",
    srcs = ["workspace_parent_pty_test.py"],
    data = ["//src/parent:workspace_parent"],
    tags = ["integration"],
)
